--- a/Урок 07-09. Введение в Python/Python - HW08.html
+++ b/Урок 07-09. Введение в Python/Python - HW08.html
@@ -203,7 +203,7 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройденно
+        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройдено
           до этого урока включительно.</p>
         <h3>Как отправлять</h3>
         <p>Под каждую выдачу домашнего задания создавайте новый файл с кодом и заполняйте его, как указано ниже.</p>
@@ -264,7 +264,8 @@ to be</code></pre>
         <h2>Домашнее Задание 8.4</h2>
         <p><span class="hl-text">Teston Lebra</span> нашёл другую работу, другой кредит и влез в долги за коммунальные
           услуги. Напишите программу, которая <span class="hl-text">запрашивает с консоли зарплату за месяц</span>,
-          <span class="hl-text">сумму месячного платежа по кредиту в банке</span> и <span class="hl-text">задолжность за
+          <span class="hl-text">сумму месячного платежа по кредиту в банке</span> и <span class="hl-text">задолженность
+            за
             коммунальные услуги</span>, затем <span class="hl-text">выводит в консоль сумму, которая останется после
             всех выплат</span>.
         </p>
@@ -272,7 +273,7 @@ to be</code></pre>
         <div class="console">
           <pre><code>Введите зарплату за месяц: <span class="input">1000</span>
 Введите сумму месячного платежа по кредиту в банке: <span class="input">250</span>
-Введите задолжность за коммунальные услуги: <span class="input">320</span>
+Введите задолженность за коммунальные услуги: <span class="input">320</span>
 
 Итоговая сумма после выплат: 430</code></pre>
         </div>
