--- a/Урок 03. Программное обеспечение ПК/Python - HW03.html
+++ b/Урок 03. Программное обеспечение ПК/Python - HW03.html
@@ -119,31 +119,12 @@
           <br>— SSD NVME 1TB XPG SX8200 Pro
           <br>— Кулер ID-Cooling SE 214 XT white argb
           <br>— Корпус Cooler Master HAF 500 white
-          <p>Укажите, какую мощность Вы бы порекомендовали для данной сборки и почему.
+        <p>Укажите, какую мощность Вы бы порекомендовали для данной сборки и почему.
         </p>
 
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 3.2</h2>
-        <p>На сайте <a href="https://pcpartpicker.com/">https://pcpartpicker.com/</a> сделайте сборку ПК, стоимость которого не превышает <span class="hl-text">1 800</span> долларов (<span class="hl-text">около 3 000 манат</span>) и удовлетворяет следующим требованиям:
-          <br>— Сборка подходит для комфортной игры в компьютерные игры
-          <br>— Выбран CPU
-          <br>— Выбран CPU Cooler
-          <br>— Выбран Motherboard
-          <br>— Выбран Memory
-          <br>— Выбран Storage
-          <br>— Выбран Video Card
-          <br>— Выбран Case
-          <br>— Выбран Power Supply
-          <br>— Присутствует объяснение причины выбора компонентов
-        </p>
-        <p>После того, как сделаете сборку, скопируйте ссылку, которая будет у вас над выбранными компонентами, и вставьте её в текстовый документ с домашним заданием.</p>
-        <img src="https://i.imgur.com/nsEXUnu.png">
-
-        <p>Далее подробно опишите причину выбора компонентов.</p>
-      </div>
-      <div class="right-rect">
-        <h2>Домашнее Задание 3.3</h2>
         <p>На сайте <a href="https://pcpartpicker.com/">https://pcpartpicker.com/</a> сделайте сборку ПК, стоимость которого не превышает <span class="hl-text">1 200</span> долларов (<span class="hl-text">около 2 000 манат</span>) и удовлетворяет следующим требованиям:
           <br>— Сборка подходит для комфортной игры в компьютерные игры
           <br>— Выбран CPU
@@ -162,9 +143,9 @@
         <p>Далее подробно опишите причину выбора компонентов.</p>
       </div>
       <div class="right-rect">
-        <h2>Домашнее Задание 3.4</h2>
+        <h2>Домашнее Задание 3.3</h2>
         <p>На сайте <a href="https://pcpartpicker.com/">https://pcpartpicker.com/</a> сделайте сборку ПК, стоимость которого не превышает <span class="hl-text">600</span> долларов (<span class="hl-text">около 1 000 манат</span>) и удовлетворяет следующим требованиям:
-          <br>— Сборка подходит для комфортной игры в компьютерные игры
+          <br>— Сборка подходит для комфортного программирования
           <br>— Выбран CPU
           <br>— Выбран CPU Cooler
           <br>— Выбран Motherboard
@@ -181,7 +162,7 @@
         <p>Далее подробно опишите причину выбора компонентов.</p>
       </div>
       <div class="right-rect">
-        <h2>Домашнее Задание 3.5</h2>
+        <h2>Домашнее Задание 3.4</h2>
         <p>По сборке компьютера и комментарию пользователя объясните, в чём может быть проблема (считайте, что компьютер настроен правильно, а компоненты не бракованные).</p>
 
         <h3>СБОРКА:</h3>
@@ -200,7 +181,7 @@
         <p>"Появились проблемы с моим игровым компьютером - периодически, во время игры, экран просто становится черным, словно его выключили, и все система отключается. Это происходит случайным образом, без каких-либо предупреждений или предшествующих признаков. Иногда он сразу же перезагружается после загрузки ОС. Когда занимаюсь работой (пишу статьи), то таких проблем не возникает. Не могу понять, в чем может быть причина такого поведения."</p>
       </div>
       <div class="right-rect">
-        <h2>Домашнее Задание 3.6</h2>
+        <h2>Домашнее Задание 3.5</h2>
         <p>По сборке компьютера и комментарию пользователя объясните, в чём может быть проблема (считайте, что компьютер настроен правильно, а компоненты не бракованные).</p>
 
         <h3>СБОРКА:</h3>
@@ -220,26 +201,26 @@
         <p>"Собрал новый компьютер, но у него всё время возникают проблемы. Он периодически выдаёт ошибки при выполнении различных задач - игры и обычные рабочие программы. Видеокарта, блок питания и одна планка ОЗУ от старой сборки, две другие планки ОЗУ дал друг (планки рабочие, проверял в сборке друга). Не могу понять, в чём может быть причина этой нестабильности."</p>
       </div>
       <div class="right-rect">
-        <h2>Домашнее Задание 3.7</h2>
+        <h2>Домашнее Задание 3.6</h2>
         <p>По сборке компьютера и комментарию пользователя объясните, в чём может быть проблема (считайте, что компьютер настроен правильно, а компоненты не бракованные).</p>
 
         <h3>СБОРКА:</h3>
         <p><span class="hl-text">CPU:</span> Intel Core i9-14900K 3.2 GHz 24-Core Processor
           <br><span class="hl-text">CPU Cooler:</span> ARCTIC Alpine 17 CO CPU Cooler
-          <br><span class="hl-text">Motherboard:</span> MSI PRO Z790-A MAX WIFI ATX LGA1700 Motherboard
-          <br><span class="hl-text">Memory:</span> Corsair Vengeance 32 GB (2 x 16 GB) DDR5-4800 CL40 Memory
-          <br><span class="hl-text">Memory:</span> Corsair Vengeance 32 GB (2 x 16 GB) DDR5-4800 CL40 Memory
-          <br><span class="hl-text">Storage:</span> Samsung 960 Pro 1 TB M.2-2280 PCIe 3.0 X4 NVME Solid State Drive
-          <br><span class="hl-text">Storage:</span> Samsung 870 Evo 4 TB 2.5" Solid State Drive
-          <br><span class="hl-text">Video Card:</span> MSI VENTUS 3X OC GeForce RTX 4070 Ti 12 GB Video Card
-          <br><span class="hl-text">Power Supply:</span> Thermaltake Toughpower GX1 RGB 700 W 80+ Gold Certified ATX Power Supply
+          <br><span class="hl-text">Motherboard:</span> Asus ROG STRIX Z790-A GAMING WIFI II ATX LGA1700 Motherboard
+          <br><span class="hl-text">Memory:</span> TEAMGROUP T-Force Delta RGB 32 GB (2 x 16 GB) DDR5-6000 CL30 Memory
+          <br><span class="hl-text">Memory:</span> TEAMGROUP T-Force Delta RGB 32 GB (2 x 16 GB) DDR5-6000 CL30 Memory
+          <br><span class="hl-text">Storage:</span> Kingston A400 480 GB 2.5" Solid State Drive
+          <br><span class="hl-text">Storage:</span> Kingston NV2 1 TB M.2-2280 PCIe 4.0 X4 NVME Solid State Drive
+          <br><span class="hl-text">Video Card:</span> Gigabyte WINDFORCE OC GeForce RTX 4070 Ti SUPER 16 GB Video Card
+          <br><span class="hl-text">Power Supply:</span> be quiet! Pure Power 12 M 1000 W 80+ Gold Certified Fully Modular ATX Power Supply
         </p>
 
         <h3>КОММЕНТАРИЙ ПОЛЬЗОВАТЕЛЯ:</h3>
         <p>"Последнее время мой компьютер стал нестабильно работать - время от времени он просто выключается, без видимых предупреждений. Это случается особенно часто, когда я играю в игры или когда выполняю по работе сложные вычисления. Эта проблема начала проявляться недавно, до этого все работало нормально. Я подозреваю, что дело может быть в процессоре или в его работе."</p>
       </div>
       <div class="right-rect">
-        <h2>Домашнее Задание 3.8 (Необязательное)</h2>
+        <h2>Домашнее Задание 3.7 (Необязательное)</h2>
         <p>По сборке компьютера и комментарию пользователя объясните, в чём может быть проблема (считайте, что компоненты не бракованные).</p>
 
         <h3>СБОРКА:</h3>
