--- a/Урок 35-36. Сортировка. Поиск/Python - HW36.html
+++ b/Урок 35-36. Сортировка. Поиск/Python - HW36.html
@@ -204,24 +204,24 @@
 
         <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">выводит в консоль всех сотрудников в формате</span>:
         <div class="console">
-          <pre><code>Имя: Имя        Возраст: <Возраст>
-Имя: Имя        Возраст: <Возраст>
+          <pre><code>Имя: {Имя}        Возраст: {Возраст}
+Имя: {Имя}        Возраст: {Возраст}
 ...</code></pre>
         </div>
         </p>
 
         <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">сортирует копию списка по имени</span> и <span class="hl-text">выводит в консоль всех сотрудников в формате</span>:
         <div class="console">
-          <pre><code>Имя: Имя       Возраст: <Возраст>
-Имя: Имя       Возраст: <Возраст>
+          <pre><code>Имя: {Имя}        Возраст: {Возраст}
+Имя: {Имя}        Возраст: {Возраст}
 ...</code></pre>
         </div>
         </p>
 
         <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">сортирует копию списка по возрасту</span> и <span class="hl-text">выводит в консоль всех сотрудников в формате</span>:
         <div class="console">
-          <pre><code>Имя: Имя        Возраст: <Возраст>
-Имя: Имя        Возраст: <Возраст>
+          <pre><code>Имя: {Имя}        Возраст: {Возраст}
+Имя: {Имя}        Возраст: {Возраст}
 ...</code></pre>
         </div>
         </p>
